<resources>
    <string name="app_name">GPS</string>

    <!-- Numbers -->
    <string name="key_0">0</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>

    <!-- Actions -->
    <string name="key_delete">Delete</string>
    <string name="key_next">Next</string>

    <string name="number_button_tag">number_button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>