<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!-- FILA 1 -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSeven"
        style="@style/Widget.Keyboard.Button"
        android:text="@string/key_7"
        android:layout_width="@dimen/keyboard_button_width"
        android:layout_height="@dimen/keyboard_button_height"
        android:layout_margin="@dimen/keyboard_button_margin"
        android:onClick="onClick"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEight"
        style="@style/Widget.Keyboard.Button"
        android:text="@string/key_8"
        android:layout_width="@dimen/keyboard_button_width"
        android:layout_height="@dimen/keyboard_button_height"
        android:layout_margin="@dimen/keyboard_button_margin"
        android:onClick="onClick"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnSeven"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNine"
        style="@style/Widget.Keyboard.Button"
        android:layout_width="@dimen/keyboard_button_width"
        android:layout_height="@dimen/keyboard_button_height"
        android:layout_margin="@dimen/keyboard_button_margin"
        android:text="@string/key_9"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnEight"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- FILA 2 -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFour"
        style="@style/Widget.Keyboard.Button"
        android:text="@string/key_4"
        android:layout_width="@dimen/keyboard_button_width"
        android:layout_height="@dimen/keyboard_button_height"
        android:layout_margin="@dimen/keyboard_button_margin"
        android:onClick="onClick"
        app:layout_constraintTop_toBottomOf="@id/btnSeven"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFive"
        style="@style/Widget.Keyboard.Button"
        android:text="@string/key_5"
        android:layout_width="@dimen/keyboard_button_width"
        android:layout_height="@dimen/keyboard_button_height"
        android:layout_margin="@dimen/keyboard_button_margin"
        android:onClick="onClick"
        app:layout_constraintTop_toBottomOf="@id/btnEight"
        app:layout_constraintStart_toEndOf="@id/btnFour"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSix"
        style="@style/Widget.Keyboard.Button"
        android:layout_width="@dimen/keyboard_button_width"
        android:layout_height="@dimen/keyboard_button_height"
        android:layout_margin="@dimen/keyboard_button_margin"
        android:text="@string/key_6"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnFive"
        app:layout_constraintTop_toBottomOf="@id/btnNine" />


    <!-- FILA 3 -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOne"
        style="@style/Widget.Keyboard.Button"
        android:text="@string/key_1"
        android:layout_width="@dimen/keyboard_button_width"
        android:layout_height="@dimen/keyboard_button_height"
        android:layout_margin="@dimen/keyboard_button_margin"
        android:onClick="onClick"
        app:layout_constraintTop_toBottomOf="@id/btnFour"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTwo"
        style="@style/Widget.Keyboard.Button"
        android:text="@string/key_2"
        android:layout_width="@dimen/keyboard_button_width"
        android:layout_height="@dimen/keyboard_button_height"
        android:layout_margin="@dimen/keyboard_button_margin"
        android:onClick="onClick"
        app:layout_constraintTop_toBottomOf="@id/btnFive"
        app:layout_constraintStart_toEndOf="@id/btnOne"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnThree"
        style="@style/Widget.Keyboard.Button"
        android:layout_width="@dimen/keyboard_button_width"
        android:layout_height="@dimen/keyboard_button_height"
        android:layout_margin="@dimen/keyboard_button_margin"
        android:text="@string/key_3"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnTwo"
        app:layout_constraintTop_toBottomOf="@id/btnSix" />


    <!-- FILA FINAL -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDelete"
        style="@style/Widget.Keyboard.Button.Delete"
        android:layout_width="@dimen/keyboard_button_width"
        android:layout_height="@dimen/keyboard_button_height"
        android:layout_margin="@dimen/keyboard_button_margin"
        android:gravity="center"
        android:paddingTop="15dp"
        android:text=""
        app:icon="@drawable/ic_delete_button_64"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="32dp"
        app:iconTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnOne" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnZero"
        style="@style/Widget.Keyboard.Button"
        android:layout_width="@dimen/keyboard_button_width"
        android:layout_height="@dimen/keyboard_button_height"
        android:layout_margin="@dimen/keyboard_button_margin"
        android:text="@string/key_0"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDelete"
        app:layout_constraintTop_toBottomOf="@id/btnTwo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinue"
        style="@style/Widget.Keyboard.Button.Action"
        android:layout_width="@dimen/keyboard_button_width"
        android:layout_height="@dimen/keyboard_button_height"
        android:layout_margin="@dimen/keyboard_button_margin"
        android:gravity="center"
        android:paddingStart="20dp"
        app:icon="@drawable/ic_confirm_button_64"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="32dp"
        app:iconTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnZero"
        app:layout_constraintTop_toBottomOf="@id/btnThree" />


</androidx.constraintlayout.widget.ConstraintLayout>
